# https://pypi.org/project/setupcfg-generator/
[metadata]
name = jsfiddle-factory
version = 2019.4.11
url = https://github.com/looking-for-a-job/jsfiddle-factory.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = jsfiddle

[options]
install_requires = 
	click
	getdirs
	getfiles
	jsfiddle_build
	popd
	setuptools
packages = 
	jsfiddle_factory
