# https://pypi.org/project/setupcfg-generator/
[metadata]
name = jsfiddle-factory
version = 2019.4.14
url = https://github.com/looking-for-a-job/jsfiddle-factory.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = jsfiddle

[options]
install_requires = 
	PyYAML
	click
	getdirs
	getfiles
	jsfiddle_build
	jsfiddle_generator
	jsfiddle_github
	jsfiddle_readme_generator
	popd
	public
	setuptools
packages = 
	jsfiddle_factory
